quickfix: height of elements list set to fixed value to prevent button row from jumping

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ hr {
 
 .dynamic-setting-list {
   margin-left: 100px;
-  max-height: 350px;
+  height: 350px;
   overflow-y: auto;
 }
 
